--- a/uts.html
+++ b/uts.html
@@ -1,87 +1,117 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio & CV</title>
-    <link rel="stylesheet" href="UTS.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="container">
-        
-        <aside class="sidebar">
-            <img src="https://vclass.unila.ac.id/pluginfile.php/1527248/user/icon/mb2nl/f1?rev=20603567" alt="Foto Profil" class="profile-photo">
-            <h1>Ardhila Wulan Octavia Putri</h1>
-            <p class="description"> Saya merupakan seorang mahasiswa Pendidikan Teknologi Informasi di Universitas Lampung. Saya dapat bekerja sama tim dengan baik dan mudah beradaptasi dengan lingkungan baru, Saya seorang yang bertanggung jawab terhadap amanah, pekerja keras dan juga dapat memanajemen waktu dengan baik.</p>
-            <section class="contact">
-                <h2>Kontak</h2>
+
+    <div class="wrapper">
+        <div class="main-grid">
+            <div class="left-side">
+                <img src="https://vclass.unila.ac.id/pluginfile.php/1527248/user/icon/mb2nl/f1?rev=20603567" alt="Foto Anda">
+                <h1>Ardhila Wulan Octavia Putri</h1>
+                <h2>Contact</h2>
+                <hr>
                 <ul>
-                    <li>Email: <a href="ardhilawulan@gmail.com">ardhilawulan@gmail.com</a></li>
+                    <li>Email: <a href="mailto:ardhilawulan@gmail.com">ardhilawulan@gmail.com</a></li>
                     <li>No. WA: <a href="https://wa.me/087899911532">+62 87899911532</a></li>
-                    <li>Instagram: <a href="https://www.instagram.com/ardhilawulan?igsh=YmptdjQ4aWY1amFp">instagram.com</a></li>
+                    <li>Instagram: <a href="https://www.instagram.com/ardhilawulan?igsh=YmptdjQ4aWY1amFp">instagram.com/ardhilawulan</a></li>
                 </ul>
-            </section>
-        </aside>
-
-        <!-- Bagian Kanan (Konten Utama) -->
-        <main class="main-content">
-            <section class="skills">
-                <h2>Kemampuan IT</h2>
+                <h2>Skill IT</h2>
                 <ul>
-                    <li>HTML, CSS, JavaScript</li>
-                    <li>Python, Java</li>
-                    <li>Database Management (MySQL, PostgreSQL)</li>
-                    <li>Version Control (Git, GitHub)</li>
+                    <li>Pengembangan WEB (C++, HTML, CSS, JavaScript)</li>
+                    <li>Manajemen Basis Data (MySQL)</li>
+                    <li>Kontrol Versi (GitHub, Notepad, VSCode)</li>
                 </ul>
-            </section>
-            
-        <section class="experience">
-                <h2>Pengalaman Kerja</h2>
-                <ul>
-                    <li><strong> - </strong> </li>
-                </ul>
-            </section>
-
-            <section class="languages">
                 <h2>Kemampuan Bahasa</h2>
                 <ul>
-                    <li>Bahasa Indonesia (Lancar)</li>
-                    <li>Bahasa Inggris (Menengah)</li>
+                    <li>Bahasa Indonesia</li>
+                    <li>English</li>
                 </ul>
-            </section>
+            </div>
+
+            <div class="right-side">
+                <div>
+                    <h2>About Me</h2>
+                    <hr>
+                </div>
+                 <p>Saya merupakan seorang mahasiswa Pendidikan Teknologi Informasi di Universitas Lampung. Saya dapat bekerja sama tim dengan baik dan mudah beradaptasi dengan lingkungan baru, Saya seorang yang bertanggung jawab terhadap amanah, pekerja keras dan juga dapat memanajemen waktu dengan baik.</p>
+                <div>
+                    <h2>Experience</h2>
+                    <hr>
+                </div>
 
 
-            <section class="organization">
-                <h2>Pengalaman Organisasi</h2>
-                <ul>
-                    <li>Anggota Divisi Pendidikan - Formatif (2023 - Sekarang)</li>
-                    <li>Panitia Impression</li>
-                    <li>Panitia Impression</li>
-                    <li>Panitia </li>
-                </ul>
-            </section>
+                <div class="right-grid">
 
-            <section class="education">
-                <h2>Riwayat Pendidikan</h2>
-                <ul>
-                    <li><strong>Universitas ABC</strong> - S1 Teknik Informatika (2020 - sekarang)</li>
-                    <li><strong>SMA XYZ</strong> - Jurusan IPA (2017 - 2020)</li>
-                </ul>
-            </section>
+                    <div class="work">
+                        <div class="position"> Fotografer Wedding</div>
+                        <div class="Company"> Freelance</div>
+                        <div class="date"> 5 May 2024 </div>
+                        <div class="desc">
+                            Saya pernah freelance sebagai fotorgafer wedding karena saya memiliki keahilan di bidang fotografi
+                        </div>
+                    </div>
 
-            <section class="certification">
-                <h2>Sertifikasi</h2>
-                <ul>
-                    <li>Certified Web Developer - Dicoding (2023)</li>
-                    <li>Python for Data Science - Coursera (2022)</li>
-                </ul>
-            </section>
 
-        </main>
+                    <div class="work">
+                        <div class="position"> Entry Data</div>
+                        <div class="Company"> Kominfo</div>
+                        <div class="date"> 5 May 2024 - 5 July 2024</div>
+                        <div class="desc">
+                            Saya pernah menjadi petugas entry data kominfo pada event Literasi Digital
+                        </div>
+                    </div>
+
+
+                    <div class="work">
+                        <div class="position"> private tutor</div>
+                        <div class="Company"> Kominfo</div>
+                        <div class="date"> March 2022 - November 2023 </div>
+                        <div class="desc">
+                            Saya pernah menjadi guru privat yang mengajar anak SD saat masih SMA  
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <h2>Education</h2>
+                    <hr>
+                </div>
+
+                <div class="right-grid">
+                    <div class="study">
+                        <div class="category">College</div>
+                        <div class="school">Universitas Lampung</div>
+                        <div class="date">2023 - now</div>
+                    </div>
+
+                    <div class="study">
+                        <div class="category">Senior High School</div>
+                        <div class="school">SMAN 1 Gadingrejo</div>
+                        <div class="date">2020 - 2023</div>
+                    </div>
+
+                    <div class="study">
+                        <div class="category">Junior High School</div>
+                        <div class="school">SMPN 1 Gadingrejo</div>
+                        <div class="date">2017 - 2020</div>
+                    </div>
+
+                    <div class="study">
+                        <div class="category">Elementary School</div>
+                        <div class="school">SDN 1 Tambahrejo</div>
+                        <div class="date">2011 - 2017</div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <footer>
-        <p>&copy; 2024 Nama Anda. All Rights Reserved.</p>
-    </footer>
 </body>
 </html>
