--- a/uts.html
+++ b/uts.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio & CV</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -33,6 +33,12 @@
                     <li>Bahasa Indonesia</li>
                     <li>English</li>
                 </ul>
+                <h2>Pengalaman Organisasi</h2>
+                <ul>
+                    <li>UKM Fotografi Zoom</li>
+                    <li>Formatif</li>
+                </ul>
+ 
             </div>
 
             <div class="right-side">
@@ -40,41 +46,38 @@
                     <h2>About Me</h2>
                     <hr>
                 </div>
-                 <p>Saya merupakan seorang mahasiswa Pendidikan Teknologi Informasi di Universitas Lampung. Saya dapat bekerja sama tim dengan baik dan mudah beradaptasi dengan lingkungan baru, Saya seorang yang bertanggung jawab terhadap amanah, pekerja keras dan juga dapat memanajemen waktu dengan baik.</p>
+                <p>Saya merupakan seorang mahasiswa Pendidikan Teknologi Informasi di Universitas Lampung. Saya dapat bekerja sama tim dengan baik dan mudah beradaptasi dengan lingkungan baru, Saya seorang yang bertanggung jawab terhadap amanah, pekerja keras dan juga dapat memanajemen waktu dengan baik.</p>
+                
                 <div>
                     <h2>Experience</h2>
                     <hr>
                 </div>
 
-
                 <div class="right-grid">
-
                     <div class="work">
-                        <div class="position"> Fotografer Wedding</div>
-                        <div class="Company"> Freelance</div>
-                        <div class="date"> 5 May 2024 </div>
+                        <div class="position">Fotografer Wedding</div>
+                        <div class="company">Freelance</div>
+                        <div class="date">5 Mei 2024</div>
                         <div class="desc">
-                            Saya pernah freelance sebagai fotorgafer wedding karena saya memiliki keahilan di bidang fotografi
+                            Saya pernah freelance sebagai fotografer wedding karena saya memiliki keahlian di bidang fotografi.
                         </div>
                     </div>
 
-
                     <div class="work">
-                        <div class="position"> Entry Data</div>
-                        <div class="Company"> Kominfo</div>
-                        <div class="date"> 5 May 2024 - 5 July 2024</div>
+                        <div class="position">Entry Data</div>
+                        <div class="company">Kominfo</div>
+                        <div class="date">5 Mei 2024 - 5 Juli 2024</div>
                         <div class="desc">
-                            Saya pernah menjadi petugas entry data kominfo pada event Literasi Digital
+                            Saya pernah menjadi petugas entry data Kominfo pada event Literasi Digital.
                         </div>
                     </div>
 
-
                     <div class="work">
-                        <div class="position"> private tutor</div>
-                        <div class="Company"> Kominfo</div>
-                        <div class="date"> March 2022 - November 2023 </div>
+                        <div class="position">Private Tutor</div>
+                        <div class="company">Kominfo</div>
+                        <div class="date">Maret 2022 - November 2023</div>
                         <div class="desc">
-                            Saya pernah menjadi guru privat yang mengajar anak SD saat masih SMA  
+                            Saya pernah menjadi guru privat yang mengajar anak SD saat masih SMA.
                         </div>
                     </div>
                 </div>
@@ -85,12 +88,6 @@
                 </div>
 
                 <div class="right-grid">
-                    <div class="study">
-                        <div class="category">College</div>
-                        <div class="school">Universitas Lampung</div>
-                        <div class="date">2023 - now</div>
-                    </div>
-
                     <div class="study">
                         <div class="category">Senior High School</div>
                         <div class="school">SMAN 1 Gadingrejo</div>
@@ -112,6 +109,8 @@
             </div>
         </div>
     </div>
-
+    <footer></footer>
+        &copy; 2024 Ardhila Wulan Octavia Putri. All rights reserved.
+    </footer>
 </body>
 </html>
